--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
+    "recharts": "^3.1.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
